--- a/src/test/resources/jforumConfig/SystemGlobals.properties
+++ b/src/test/resources/jforumConfig/SystemGlobals.properties
@@ -2,3 +2,5 @@ html.tags.welcome = u, a, img, i, u, li, ul, font, br, p, b, hr
 html.attributes.welcome = src, href, size, face, color, target, rel
 html.links.allow.relative = false
 html.links.allow.protocols = http://, https://, mailto:, ftp://
+
+jforum.block_ip = false
