added property we need in test phase

--- a/src/test/resources/jforumConfig/SystemGlobals.properties
+++ b/src/test/resources/jforumConfig/SystemGlobals.properties
@@ -3,4 +3,5 @@ html.attributes.welcome = src, href, size, face, color, target, rel
 html.links.allow.relative = false
 html.links.allow.protocols = http://, https://, mailto:, ftp://
 
+auto.login.enabled = true
 jforum.block_ip = false
